--- a/kite_monitor/sample.ipynb
+++ b/kite_monitor/sample.ipynb
@@ -64,6 +64,410 @@
     "    print(key)\n",
     "    print(value)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instrument_token</th>\n",
+       "      <th>exchange_token</th>\n",
+       "      <th>tradingsymbol</th>\n",
+       "      <th>name</th>\n",
+       "      <th>last_price</th>\n",
+       "      <th>expiry</th>\n",
+       "      <th>strike</th>\n",
+       "      <th>tick_size</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>instrument_type</th>\n",
+       "      <th>segment</th>\n",
+       "      <th>exchange</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>537733638</td>\n",
+       "      <td>2100522</td>\n",
+       "      <td>EURINR23DEC83.25CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.25</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>537730310</td>\n",
+       "      <td>2100509</td>\n",
+       "      <td>EURINR23DEC83.25PE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.25</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>537617158</td>\n",
+       "      <td>2100067</td>\n",
+       "      <td>EURINR23DEC83.5CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>537614342</td>\n",
+       "      <td>2100056</td>\n",
+       "      <td>EURINR23DEC83.5PE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>537747718</td>\n",
+       "      <td>2100577</td>\n",
+       "      <td>EURINR23DEC83.75CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.75</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   instrument_token  exchange_token       tradingsymbol    name  last_price   \n",
+       "0         537733638         2100522  EURINR23DEC83.25CE  EURINR           0  \\\n",
+       "1         537730310         2100509  EURINR23DEC83.25PE  EURINR           0   \n",
+       "2         537617158         2100067   EURINR23DEC83.5CE  EURINR           0   \n",
+       "3         537614342         2100056   EURINR23DEC83.5PE  EURINR           0   \n",
+       "4         537747718         2100577  EURINR23DEC83.75CE  EURINR           0   \n",
+       "\n",
+       "       expiry  strike  tick_size  lot_size instrument_type  segment exchange  \n",
+       "0  2023-12-27   83.25     0.0025         1              CE  BCD-OPT      BCD  \n",
+       "1  2023-12-27   83.25     0.0025         1              PE  BCD-OPT      BCD  \n",
+       "2  2023-12-27   83.50     0.0025         1              CE  BCD-OPT      BCD  \n",
+       "3  2023-12-27   83.50     0.0025         1              PE  BCD-OPT      BCD  \n",
+       "4  2023-12-27   83.75     0.0025         1              CE  BCD-OPT      BCD  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from io import BytesIO\n",
+    "def get_instrument_details():\n",
+    "    import requests \n",
+    "    url = 'https://api.kite.trade/instruments'\n",
+    "    r = requests.get(url, allow_redirects=True)\n",
+    "    # open('instruments.csv', 'wb').write(r.content)\n",
+    "    import pandas as pd\n",
+    "    df = df = pd.read_csv(BytesIO(r.content))\n",
+    "    return df\n",
+    "\n",
+    "o = get_instrument_details()\n",
+    "o.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instrument_token</th>\n",
+       "      <th>exchange_token</th>\n",
+       "      <th>tradingsymbol</th>\n",
+       "      <th>name</th>\n",
+       "      <th>last_price</th>\n",
+       "      <th>expiry</th>\n",
+       "      <th>strike</th>\n",
+       "      <th>tick_size</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>instrument_type</th>\n",
+       "      <th>segment</th>\n",
+       "      <th>exchange</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>537733638</td>\n",
+       "      <td>2100522</td>\n",
+       "      <td>EURINR23DEC83.25CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.25</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>537730310</td>\n",
+       "      <td>2100509</td>\n",
+       "      <td>EURINR23DEC83.25PE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.25</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>537617158</td>\n",
+       "      <td>2100067</td>\n",
+       "      <td>EURINR23DEC83.5CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>537614342</td>\n",
+       "      <td>2100056</td>\n",
+       "      <td>EURINR23DEC83.5PE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.50</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>537747718</td>\n",
+       "      <td>2100577</td>\n",
+       "      <td>EURINR23DEC83.75CE</td>\n",
+       "      <td>EURINR</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-12-27</td>\n",
+       "      <td>83.75</td>\n",
+       "      <td>0.0025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>BCD-OPT</td>\n",
+       "      <td>BCD</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   instrument_token  exchange_token       tradingsymbol    name  last_price   \n",
+       "0         537733638         2100522  EURINR23DEC83.25CE  EURINR           0  \\\n",
+       "1         537730310         2100509  EURINR23DEC83.25PE  EURINR           0   \n",
+       "2         537617158         2100067   EURINR23DEC83.5CE  EURINR           0   \n",
+       "3         537614342         2100056   EURINR23DEC83.5PE  EURINR           0   \n",
+       "4         537747718         2100577  EURINR23DEC83.75CE  EURINR           0   \n",
+       "\n",
+       "       expiry  strike  tick_size  lot_size instrument_type  segment exchange  \n",
+       "0  2023-12-27   83.25     0.0025         1              CE  BCD-OPT      BCD  \n",
+       "1  2023-12-27   83.25     0.0025         1              PE  BCD-OPT      BCD  \n",
+       "2  2023-12-27   83.50     0.0025         1              CE  BCD-OPT      BCD  \n",
+       "3  2023-12-27   83.50     0.0025         1              PE  BCD-OPT      BCD  \n",
+       "4  2023-12-27   83.75     0.0025         1              CE  BCD-OPT      BCD  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"instruments.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[13353730]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['tradingsymbol']== 'MIDCPNIFTY23OCT10000CE' ]['instrument_token'].to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>instrument_token</th>\n",
+       "      <th>exchange_token</th>\n",
+       "      <th>tradingsymbol</th>\n",
+       "      <th>name</th>\n",
+       "      <th>last_price</th>\n",
+       "      <th>expiry</th>\n",
+       "      <th>strike</th>\n",
+       "      <th>tick_size</th>\n",
+       "      <th>lot_size</th>\n",
+       "      <th>instrument_type</th>\n",
+       "      <th>segment</th>\n",
+       "      <th>exchange</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>70119</th>\n",
+       "      <td>13353730</td>\n",
+       "      <td>52163</td>\n",
+       "      <td>MIDCPNIFTY23OCT10000CE</td>\n",
+       "      <td>MIDCPNIFTY</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2023-10-30</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>75</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>NFO-OPT</td>\n",
+       "      <td>NFO</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       instrument_token  exchange_token           tradingsymbol        name   \n",
+       "70119          13353730           52163  MIDCPNIFTY23OCT10000CE  MIDCPNIFTY  \\\n",
+       "\n",
+       "       last_price      expiry   strike  tick_size  lot_size instrument_type   \n",
+       "70119           0  2023-10-30  10000.0       0.05        75              CE  \\\n",
+       "\n",
+       "       segment exchange  \n",
+       "70119  NFO-OPT      NFO  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[df['tradingsymbol']== 'MIDCPNIFTY23OCT10000CE' ]"
+   ]
   }
  ],
  "metadata": {
